Make pylint a bit happier

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py39, pylint, flake8, mypy, blackck
+envlist = py39, lint, linttests, flake8, mypy, blackck
 
 [testenv]
 deps = pytest
@@ -8,8 +8,11 @@ commands = python -m pytest
 
 [testenv:lint]
 deps = pylint
-commands = pylint syst_plugin test
+commands = pylint syst_plugin
 
+[testenv:linttests]
+deps = pylint
+commands = pylint --disable=C0116,C0114 test/test_plugin.py test/test_pyst_process.py
 
 [testenv:flake]
 deps = flake8
