Make pylint happier

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ commands = pylint syst_plugin
 
 [testenv:linttests]
 deps = pylint
-commands = pylint --disable=C0116,C0114 test/test_plugin.py test/test_pyst_process.py
+commands = pylint --disable=C0116,C0114 test/test_plugin.py test/test_pyst_process.py test/test_use_case.py
 
 [testenv:flake]
 deps = flake8
