make pyflake happier

--- a/tox.ini
+++ b/tox.ini
@@ -16,11 +16,11 @@ commands = pylint --disable=C0116,C0114 test/test_plugin.py test/test_pyst_proce
 
 [testenv:flake]
 deps = flake8
-commands = flake8 pyst_plugin test
+commands = flake8 syst_plugin test
 
 [testenv:mypy]
 deps = mypy
-commands = mypy pyst_plugin
+commands = mypy syst_plugin
 
 [testenv:blackck]
 deps = black
