--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py39, lint, linttests, flake8, mypy, blackck
+envlist = py39, lint, linttests, flake, mypy, blackck
 
 [testenv]
 deps = pytest
@@ -12,7 +12,7 @@ commands = pylint syst_plugin
 
 [testenv:linttests]
 deps = pylint
-commands = pylint --disable=C0116,C0114 test/test_plugin.py test/test_pyst_process.py test/test_use_case.py
+commands = pylint --disable=C0116,C0114 test/test_plugin.py test/test_pyst_process.py test/test_use_cases.py
 
 [testenv:flake]
 deps = flake8
