Add missing dependency

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ deps = flake8
 commands = flake8 syst_plugin test
 
 [testenv:mypy]
-deps = mypy
+deps = mypy, pytest
 commands = mypy syst_plugin
 
 [testenv:blackck]
