--- a/tox.ini
+++ b/tox.ini
@@ -3,23 +3,28 @@ envlist = py39, lint, linttests, flake, mypy, blackck
 
 [testenv]
 deps = pytest
-#commands = pytest # TODO one test fails
 commands = python -m pytest
 
 [testenv:lint]
-deps = pylint
-commands = pylint syst_plugin
+deps =
+    pylint
+    pytest
+commands = pylint --disable=W0511,R0902 syst_plugin/plugin.py syst_plugin/pyst_process.py
 
 [testenv:linttests]
-deps = pylint
-commands = pylint --disable=C0116,C0114 test/test_plugin.py test/test_pyst_process.py test/test_use_cases.py
+deps =
+    pylint
+    pytest
+commands = pylint --disable=C0116,C0114,W0511 test/test_plugin.py test/test_pyst_process.py test/test_use_cases.py
 
 [testenv:flake]
 deps = flake8
-commands = flake8 syst_plugin test
+commands = flake8 --exclude=__init__.py --max-line-length=88 syst_plugin test
 
 [testenv:mypy]
-deps = mypy, pytest
+deps =
+    mypy
+    pytest
 commands = mypy syst_plugin
 
 [testenv:blackck]
