Start to introduce type hints

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ commands = flake8 --exclude=__init__.py --max-line-length=88 syst_plugin test
 deps =
     mypy
     pytest
-commands = mypy syst_plugin
+commands = mypy syst_plugin test
 
 [testenv:blackck]
 deps = black
