Add a test for run with mocked dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -2,18 +2,22 @@
 envlist = py39, lint, linttests, flake, mypy, blackck
 
 [testenv]
-deps = pytest
+deps =
+    pytest
+    pytest-mock
 commands = python -m pytest
 
 [testenv:lint]
 deps =
     pylint
+    pytest-mock
     pytest
 commands = pylint --disable=W0511,R0902 syst_plugin/plugin.py syst_plugin/pyst_process.py
 
 [testenv:linttests]
 deps =
     pylint
+    pytest-mock
     pytest
 commands = pylint --disable=C0116,C0114,W0511 test/test_plugin.py test/test_pyst_process.py test/test_use_cases.py
 
@@ -24,6 +28,7 @@ commands = flake8 --exclude=__init__.py --max-line-length=88 syst_plugin test
 [testenv:mypy]
 deps =
     mypy
+    pytest-mock
     pytest
 commands = mypy syst_plugin test
 
