--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ deps =
     pylint
     pytest-mock
     pytest
-commands = pylint --disable=C0116,C0114,W0511 test/test_plugin.py test/test_pyst_process.py test/test_use_cases.py
+commands = pylint --disable=C0116,C0114,W0511 test/test_plugin.py test/test_pyst_process.py test/test_use_cases.py test/test_scopes.py
 
 [testenv:flake]
 deps = flake8
